# wonwon-battery

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  base.py  catl.py  compare_swot.py  lges.py  market.py  planner.py  skeptic.py  supervisor.py  validator.py  writer.py
config/: __init__.py  settings.py
data/: metadata_template.json
data/metadata/: 20251015_LG Energy Solution (373220 KS_Buy).json  (+10 more)
graph/: __init__.py  builder.py  router.py  visualization.py
ingestion/: chunking.py  loaders.py  pipeline.py
prompts/: catl.md  compare_swot.md  lges.md  market.md  planner.md  query_refiner.md  retrieval_decider.md  skeptic.md  supervisor.md  validator.md  writer.md
retrieval/: __init__.py  article_fetcher.py  balanced_web_search.py  embeddings.py  judge.py  local_rag.py  pipeline.py  query_policy.py  query_refiner.py  retrieval_decider.py  vector_schema.py  vector_store.py
schemas/: __init__.py  state.py
tests/: test_app_output.py  test_app_startup.py  test_article_fetcher.py  test_embedding_config.py  test_evidence_context.py  test_graph_smoke.py  test_graph_visualization.py  test_import_safety.py  test_ingestion_loaders.py  test_local_rag.py  test_logging_config.py  test_model_selection.py  test_prompt_contracts.py  test_retrieval_judge.py  test_retrieval_pipeline.py  test_skeptic.py  test_supervisor.py  test_validator.py  test_vector_store.py  test_writer_references.py
utils/: __init__.py  citation_linker.py  evidence_context.py  logging.py  prompt_loader.py  report_export.py
(+40 files in other folders)
