[project]
name = "wonwon-battery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "accelerate>=1.13.0",
    "chromadb>=1.5.5",
    "langchain>=0.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=0.1.2",
    "langchain-teddynote>=0.5.4",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=0.2.0",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=5.3.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "grandalf>=0.8",
]
